<resources>
    <string name="app_name">The Italian Restaurant</string>
    <string name="entrees">Entrées</string>
    <string name="desserts">Desserts</string>
    <string name="plats">Plats</string>
    <string name="logo_page_accueil_application">Logo page accueil Application</string>
    <string name="qualit_e_know_how_italiano">Qualità e know-how italiano</string>
    <string name="créé_par_des_professionnels">créé par des professionnels</string>
    <string name="nos_plats">Nos Plats</string>
    <string name="i_nostri_piatti">I nostri piatti</string>
    <string name="image_du_repas_correspondant_la_description">Image du repas correspondent à la description</string>
    <string name="nom_repas">Nom Repas</string>
    <string name="descriptionrepas">DescriptionRepas</string>
    <string name="prixrepas">PrixRepas</string>
    <string name="test">test</string>
    <string name="repasdetails">RepasDetails</string>
    <string name="ingredients_du_plat">TextView</string>
    <string name="image_du_repas_choisis">Image du Repas choisis</string>
    <string name="prix_details">Prix</string>
    <string name="test_image_1">test</string>
    <string name="via_bonifacio_viii_14_00165_roma_rm_italie">Via Bonifacio VIII, 14, 00165 Roma RM, Italie</string>
    <string name="guide_michelin">Guide Michelin</string>
    <string name="image_de_pizza">Image de pizza</string>
    <string name="minus">-</string>
    <string name="plus_button">Plus Button</string>
    <string name="minus_button">Minus Button</string>
    <string name="quantity">quantity</string>
    <string name="quantity_1">1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">lorem_ipsum</string>
    <string name="carouselimage">CarouselImage</string>
    <string name="shoping_cart">Shoping Cart</string>
    <string name="image_de_panier">Image de panier</string>
    <string name="titre">titre</string>
    <string name="_100">100</string>
    <string name="_2">2</string>
    <string name="title_activity_cart_badge">CartBadgeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre_de_ce_plat">Nombre_de_ce_plat</string>
    <string name="supprimer">Supprimer</string>
    <string name="lastname">Lastname</string>
    <string name="address">Address</string>
    <string name="password_verification">Password Verification</string>
    <string name="firstname">Firstname</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_form">Sign Up Form</string>
    <string name="payer">Payer</string>
    <string name="gotologin">GoToLogin</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_login">Login_login</string>
    <string name="login_in_signup">login_in_signup</string>
    <string name="myaccount">MYACCOUNT</string>
    <string name="connect">Connect</string>
    <string name="order_in_process_of_shipment">Order in process of shipment</string>
    <string name="menu">Menu</string>
    <string name="thank_you_for_your_order_see_you_soon">Thank you for your order, see you soon.</string>
    <string name="button_setting">button_setting</string>
    <string name="date">Date:</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="nombre_de_commande">Nombre de commande</string>
    <string name="nom">Nom</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="swiper_pour_supprimer">Swiper pour supprimer</string>
    <string name="image_profile_utilisateur">Image profile utilisateur</string>
    <string name="le_restaurant">LE RESTAURANT</string>
    <string name="welcome">welcome</string>
    <string name="bienvenue">Bienvenu</string>
    <string name="bienvenu">Bienvenue</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="login">Login</string>
    <string name="plats_profile">Plats :</string>
    <string name="merci_pour_votre_commande_bient_t">Merci pour votre commande, à bientôt</string>
    <string name="votre_commande_est_en_cours_de_livraison">Votre commande est en cours de livraison</string>
    <string name="mon_compte">Mon compte</string>
    <string name="inscription">Inscription</string>
    <string name="politique_r_glement"><![CDATA[Politique & Règlement]]></string>
    <string name="pr_nom">Prénom</string>
    <string name="adresse">Adresse</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_confirmation">Mot de passe confirmation</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="enregistrement">Enregistrement</string>
    <string name="connexion">Connexion</string>
    <string name="se_connecter">Se connecter</string>
    <string name="google_map_api_tant_payant_maintenant_google_a_refus_ma_carte_il_ne_manque_qu_une_cl_pour_pouvoir_voir_sinon_a_marche_du_coup_cliqu_sur_le_lien_ci_dessous_pour_avoir_un_petit_apper_u">Google map API étant payant maintenant, google a refusé ma carte. Il ne manque qu\'une clé pour pouvoir voir sinon ça marche :) (Du coup cliqué sur le lien ci-dessous pour avoir un petit apperçu)</string>
    <string name="solution_temporaire">Solution Temporaire</string>
    <string name="title_activity_maps">Map</string>
    <string name="la_google_map_n_affiche_rien_tr_s_probalement_cause_de_la_version_android_ou_du_manque_d_un_module_sdk_si_c_est_le_cas_pour_vous_ne_vous_en_faites_pas_cliquez_su_le_boutton_ci_dessous">La google map n\'affiche rien très probalement à cause de la version Android ou du manque d\'un module SDK. Si c\'est le cas pour vous, ne vous en faites pas ! Cliquez su le boutton ci-dessous :)</string>
    <string name="restaurant">restaurant</string>
    <string name="resto">resto</string>
</resources>