<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/idLogoRestaurantItalien"
        android:layout_width="0dp"
        android:layout_height="188dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_page_accueil_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idGuideMichelin"
        app:srcCompat="@drawable/logo_restaurant2" />

    <TextView
        android:id="@+id/idSloganRestaurant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/italiana2"
        android:gravity="center"
        android:text="@string/qualit_e_know_how_italiano"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLogoRestaurantItalien" />

    <TextView
        android:id="@+id/idAdresseRestaurantHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:fontFamily="@font/italianno"
        android:text="@string/via_bonifacio_viii_14_00165_roma_rm_italie"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPizzaImage" />

    <ImageView
        android:id="@+id/idGuideMichelin"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/guide_michelin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guide_michelin" />

    <ImageView
        android:id="@+id/idPizzaImage"
        android:layout_width="0dp"
        android:layout_height="334dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image_de_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSloganRestaurant"
        app:srcCompat="@drawable/pizza" />

    <Button
        android:id="@+id/idButtonEntree"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="130dp"
        android:background="@color/green_italie"
        android:elevation="10dp"
        android:text="@string/entrees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSloganRestaurant" />

    <Button
        android:id="@+id/idButtonPlats"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:background="@color/white_italie"
        android:elevation="10dp"
        android:text="@string/plats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idButtonEntree" />

    <Button
        android:id="@+id/idButtonDesserts"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:background="@color/green_italie_2"
        android:elevation="10dp"
        android:text="@string/desserts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idButtonPlats" />

    <Button
        android:id="@+id/idMapRestaurant"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:backgroundTint="#FFC107"
        android:text="@string/le_restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idButtonDesserts" />

</androidx.constraintlayout.widget.ConstraintLayout>