<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/idImageRepas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_du_repas_correspondant_la_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/idNomRepas"
        android:layout_width="75dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/italiana"
        android:text="@string/nom_repas"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/idImageRepas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idDescriptionRepas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/descriptionrepas"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/idImageRepas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idPrixRepas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="110dp"
        android:text="@string/prixrepas"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/idImageRepas"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>