<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/white_italie"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/idImageRepas"
        android:layout_width="125dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_du_repas_correspondant_la_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kebab_boeuf" />

    <TextView
        android:id="@+id/idNomRepas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/italiana2"
        android:text="@string/nom_repas"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idImageRepas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idPrixTotalItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:text="@string/prixrepas"
        android:textColor="@color/green_italie_2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idImageRepas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idNombreItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_ce_plat"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toEndOf="@+id/idImageRepas"
        app:layout_constraintTop_toBottomOf="@+id/idNomRepas"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/idDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/green_italie_2"
        android:fontFamily="sans-serif-light"
        android:text="@string/swiper_pour_supprimer"
        android:textColor="#636363"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idPrixTotalItem"
        app:layout_constraintStart_toEndOf="@+id/idImageRepas"
        app:layout_constraintTop_toBottomOf="@+id/idNombreItem" />

</androidx.constraintlayout.widget.ConstraintLayout>