<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/idNomRepasDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/italianno"
        android:text="@string/repasdetails"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPagerVeiw"
        app:layout_constraintVertical_bias="0.042" />

    <!--app:layout_constraintTop_toBottomOf="@+id/carouselView"-->

    <!--<com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:fillColor="@color/green_italie_contrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="6000"
        app:strokeColor="@color/green_italie_2"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />-->

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/idPagerVeiw"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idIngredientsRepasDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="cursive"
        android:text="@string/ingredients_du_plat"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNomRepasDetails" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/idFloatButtonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/plus_button"
        android:focusable="true"
        app:backgroundTint="@color/green_italie_2"
        app:layout_constraintBottom_toTopOf="@+id/idPriceRepasDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_plus_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/idFloatButtonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/minus_button"
        android:focusable="true"
        app:backgroundTint="@color/green_italie_2"
        app:layout_constraintBottom_toTopOf="@+id/idPriceRepasDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_minus_24" />

    <TextView
        android:id="@+id/idQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:inputType="number"
        android:text="@string/quantity_1"
        app:layout_constraintBottom_toTopOf="@+id/idPriceRepasDetails"
        app:layout_constraintEnd_toStartOf="@+id/idFloatButtonMinus"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@+id/idFloatButtonPlus"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/idPriceRepasDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/green_italie_2"
        android:fontFamily="@font/italiana2"
        android:text="@string/prix_details"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>